<?xml version="1.0"?>
<package format="2">
  <name>asv_sensors</name>
  <version>0.0.1</version>
  <description>The ROS package for all the sensor streams required for autonomous navigation</description>

  <maintainer email="akashp1997@gmail.com">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>

</package>
