<?xml version="1.0"?>
<package format="2">
	<name>asv_sensors</name>
	<version>0.1.1</version>
	<description>The ROS package for all the sensor interface streams required for autonomous navigation</description>

	<maintainer email="akashp1997@gmail.com">Akash Purandare</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>

	<exec_depend>rospy</exec_depend>
	<exec_depend>nmea_navsat_driver</exec_depend>
	<exec_depend>lms1xx</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>python-serial</exec_depend>

</package>